<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="buddy.conversa.MainActivity"
    android:clickable="true">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/frameLayout">

        <Button
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:text="@string/btncontact"
            android:id="@+id/btnContact"
            android:layout_gravity="right|bottom"
            android:onClick="clickHandler" />

        <Spinner
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:id="@+id/help"
            android:layout_gravity="right|top"
            android:spinnerMode="dropdown" />

        <SearchView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchView"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginLeft="60dp"
            android:onClick="clickHandler" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnGroups"
            android:layout_gravity="center_horizontal|bottom"
            android:clickable="false"
            android:text="@string/grouplist"
            android:onClick="clickHandler"
            android:background="@color/abc_search_url_text_normal" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btncreate_group"
            android:id="@+id/createGroup"
            android:layout_gravity="left|bottom"
            android:clickable="false"
            android:onClick="clickHandler" />

        <EditText
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:id="@+id/gname"
            android:layout_gravity="left|top"
            android:hint="Group Name" />

    </FrameLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/frameLayout"
        />
</RelativeLayout>